체크리스트 테마 출력

--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -78,14 +78,14 @@
 					<div class="theme-print">
 						<h3>호스트용 체크리스트</h3>
 						<ul>
-							<li th:if="${programTag.separateBathroom}">화장실과 욕실 분리 여부</li>
-							<li th:if="${programTag.bathtub}">욕조 유무</li>
-							<li th:if="${programTag.wifi}">와이파이 유무</li>
-							<li th:if="${programTag.transformer}">변압기 유무</li>
-							<li th:if="${programTag.pajamasProvided}">파자마(잠옷) 제공 여부</li>
-							<li th:if="${programTag.hairdryer}">헤어드라이기 유무</li>
-							<li th:if="${programTag.basicToiletriesProvided}">기본 세면도구 제공 여부</li>
-							<li th:if="${programTag.petFriendly}">반려동물 동반 가능 여부</li>
+							<li th:if="${programTag.separateBathroom}">화장실과 욕실 분리</li>
+							<li th:if="${programTag.bathtub}">욕조</li>
+							<li th:if="${programTag.wifi}">와이파이</li>
+							<li th:if="${programTag.transformer}">변압기</li>
+							<li th:if="${programTag.pajamasProvided}">파자마(잠옷)</li>
+							<li th:if="${programTag.hairdryer}">헤어드라이기</li>
+							<li th:if="${programTag.basicToiletriesProvided}">기본 세면도구</li>
+							<li th:if="${programTag.petFriendly}">반려동물 동반 가능</li>
 							<li th:if="${programTag.roomAlone}">방 호자 사용</li>
 							<li th:if="${programTag.langJapanese}">일본어 가능</li>
 							<li th:if="${programTag.langEnglish}">영어 가능</li>
