--- a/src/main/resources/static/css/main/write.css
+++ b/src/main/resources/static/css/main/write.css
@@ -94,6 +94,12 @@ form input[type="submit"] {
     cursor: pointer;
 }
 
+/* Additional styling */
+pre {
+    margin: 0;
+    font-family: inherit;
+}
+
 textarea[name="request"] {
     height: 200px;
 }
