--- a/src/main/resources/templates/program/apply.html
+++ b/src/main/resources/templates/program/apply.html
@@ -101,7 +101,7 @@
 		<input type="hidden" name="totalPrice" th:value="${program.price}">
 
 		<div class="right-align">
-			<button type="submit" >결제</button>
+			<button type="submit" >예약하기</button>
 		</div>
 	</form>
 	<br>
