--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -2,35 +2,55 @@
 <html xmlns:th="thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script
+
+    <script>
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                includedLanguages: 'ko,en,ja,zh-CN,fr',
+                //layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false,
+                multilanguagePage: true
+            }, 'google_translate_element');
+        }
+    </script>
+</head>
 <body>
-    <header th:fragment="header">
-        <div class="header-container header-top">
+<header th:fragment="header">
+    <div class="header-container header-top">
 
-            <div class="logo">
-                <a th:href="@{/}"><img th:src="@{/img/culture_stay_logo.png}" alt="CultureStay"></a>
-            </div>
+        <div class="logo">
+            <a th:href="@{/}"><img th:src="@{/img/culture_stay_logo.png}" alt="CultureStay"></a>
+        </div>
 
-            <nav class="menu">
-                <h2><a th:href="@{/program/list}" th:text="프로그램"></a></h2>
-                <h2><a th:href="@{/board/boardList}" th:text="커뮤니티"></a></h2>
-            </nav>
+        <nav class="menu">
+            <h2><a th:href="@{/program/list}" th:text="프로그램"></a></h2>
+            <h2><a th:href="@{/board/boardList}" th:text="커뮤니티"></a></h2>
+        </nav>
 
-            <div class="dropdown">
-                <button class="dropbtn" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-bars"></i> <!-- 메뉴 아이콘 -->
-                    <i class="fas fa-user-circle"></i> <!-- 사용자 아이콘 -->
-                </button>
-                <div class="dropdown-content" aria-label="submenu">
-                    <div sec:authorize="not isAuthenticated()"><a th:href="@{/member/join}" th:text="회원가입"></a></div>
-                    <div sec:authorize="not isAuthenticated()"><a th:href="@{/member/loginForm}" th:text="로그인"></a></div>
-                    <div sec:authorize="isAuthenticated()"><a th:href="@{/member/logout}" th:text="로그아웃"></a></div>
-                    <div sec:authorize="isAuthenticated()"><a th:href="@{/member/mypage}" th:text="마이페이지"></a></div>
-                    <hr>
-                    <a href="#">도움말</a>
-                </div>
+        <!--구글 번역 셀렉박스-->
+        <div id="google_translate_element" class="hd_lang"
+             style="float: right;position: relative;top: -4px;margin-left: 10px;"></div>
+
+        <div class="dropdown">
+            <button class="dropbtn" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-bars"></i> <!-- 메뉴 아이콘 -->
+                <i class="fas fa-user-circle"></i> <!-- 사용자 아이콘 -->
+            </button>
+            <div class="dropdown-content" aria-label="submenu">
+                <div sec:authorize="not isAuthenticated()"><a th:href="@{/member/join}" th:text="회원가입"></a></div>
+                <div sec:authorize="not isAuthenticated()"><a th:href="@{/member/loginForm}" th:text="로그인"></a></div>
+                <div sec:authorize="isAuthenticated()"><a th:href="@{/member/logout}" th:text="로그아웃"></a></div>
+                <div sec:authorize="isAuthenticated()"><a th:href="@{/member/mypage}" th:text="마이페이지"></a></div>
+                <hr>
+                <a href="#">도움말</a>
             </div>
         </div>
-    </header>
+    </div>
+</header>
+
+
 </body>
 
 </html>
