--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -2,22 +2,10 @@
 <html xmlns:th="thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script
-
-    <script>
-        function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-                pageLanguage: 'en',
-                includedLanguages: 'ko,en,ja,zh-CN,fr',
-                //layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-                autoDisplay: false,
-                multilanguagePage: true
-            }, 'google_translate_element');
-        }
-    </script>
 </head>
 <body>
 <header th:fragment="header">
+
     <div class="header-container header-top">
 
         <div class="logo">
@@ -29,10 +17,23 @@
             <h2><a th:href="@{/board/boardList}" th:text="커뮤니티"></a></h2>
         </nav>
 
-        <!--구글 번역 셀렉박스-->
+        <!--구글 번역 위젯-->
         <div id="google_translate_element" class="hd_lang"
              style="float: right;position: relative;top: -4px;margin-left: 10px;"></div>
+        <script>
+            function googleTranslateElementInit() {
+                new google.translate.TranslateElement({
+                    pageLanguage: 'en',
+                    includedLanguages: 'ko,en,ja,zh-CN,fr',
+                    //layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                    autoDisplay: false,
+                    multilanguagePage: true
+                }, 'google_translate_element');
+            }
+        </script>
+        <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
+        <!--dropbox-->
         <div class="dropdown">
             <button class="dropbtn" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-bars"></i> <!-- 메뉴 아이콘 -->
