--- a/src/main/resources/static/css/header_style.css
+++ b/src/main/resources/static/css/header_style.css
@@ -47,13 +47,13 @@ footer {
 }
 
 .logo {
-    padding: 0 40px 0 0;
+    padding: 0 60 0 0;
 }
 .logo img {
     height: 100px; /* 로고 이미지 높이 */
 }
 
-.header-container.header-bottom{
+.header-bottom{
     justify-content: center;
 }
 
@@ -173,7 +173,7 @@ button:hover {
 
 /*메뉴 스타일*/
 .menu {
-    width: 80%;
+    width: 70%;
     height: 100%;
     margin: 0;
     display: flex;
@@ -181,8 +181,8 @@ button:hover {
 }
 
 .menu h2 {
-    width: 100px;
-    margin-right: 40px; /* Space between menu items */
+    width: 160px;
+    /*margin-right: 20px;*/ /* Space between menu items */
     align-items: baseline;
 }
 
