--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -5,7 +5,12 @@
 </head>
 <body>
 <header th:fragment="header">
-    <div class="header-container header-top">
+
+    <link rel="stylesheet" th:href="@{/css/header_style.css}">
+
+    <div class="header-container header-top" style="display: flex;
+            justify-content: space-between;
+            align-items: center;">
         <div class="logo">
             <a th:href="@{/}"><img th:src="@{/img/culture_stay_logo.png}" alt="CultureStay"></a>
         </div>
@@ -15,21 +20,7 @@
             <h2><a th:href="@{/board/boardList}" th:text="커뮤니티"></a></h2>
 
             <div class="google-translate-container">
-                <!--구글 번역 위젯-->
-                <div id="google_translate_element" class="hd_lang"
-                     style="float: right;position: relative;top: -4px;margin-left: 10px;"></div>
-                <script>
-                    function googleTranslateElementInit() {
-                        new google.translate.TranslateElement({
-                            pageLanguage: 'en',
-                            includedLanguages: 'ko,en,ja,zh-CN,fr',
-                            //layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
-                            autoDisplay: false,
-                            multilanguagePage: true
-                        }, 'google_translate_element');
-                    }
-                </script>
-                <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+                <div id="google_translate_element" class="hd_lang"></div>
             </div>
         </nav>
 
@@ -49,6 +40,19 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'en',
+                includedLanguages: 'ko,en,ja,zh-CN,fr',
+                //layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false,
+                multilanguagePage: true
+            }, 'google_translate_element');
+        }
+    </script>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </header>
 
 
