--- a/src/main/resources/templates/layouts/footer.html
+++ b/src/main/resources/templates/layouts/footer.html
@@ -27,6 +27,8 @@
         <div class="footer-bottom">
             <p>© 2024 CultureStay. All Rights Reserved.</p>
         </div>
+
+        <link rel="stylesheet" th:href="@{/css/footer.css}">
     </footer>
 </body>
 
