로그인 폼 번역 위치 옮기기

--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title>CultureStay 로그인</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
     <style>
         main {
             font-family: Arial, sans-serif;
@@ -32,8 +34,8 @@
         .login-logo img {
             height: 70px;
         }
-        #userid,
-        #password {
+        input[name="userid"],
+        input[name="password"] {
             width: 93%;
             padding: 10px;
             margin-bottom: 10px;
