--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -32,10 +32,15 @@
 			</td>
 			<td th:text="${reservation.inputdate}"></td>
 			<th>예약상태</th>
-			<td th:text="${reservation.status}">
-				<a th:href="@{/program/guestReview(reserNum=${reservation.reserNum})}" 
-					th:text="리뷰"></a>
+			
+			<td th:switch="${reservation.status}">
+			    <p th:case="0">예약이 확인 대기 중입니다.</p>
+			    <p th:case="1">예약이 확인되었습니다.</p>
+			    <p th:case="2"><a th:href="@{/program/guestReview(reserNum=${reservation.reserNum})}" 
+					th:text="게스트리뷰작성하기"></a> </p>
+			    <p th:case="*" >알 수 없는 상태입니다.</p>
 			</td>
+			
 		</tr>
 	</table>
 	<br>
@@ -53,11 +58,15 @@
 			<th>예약날짜</th>
 			<td th:text="${myReservation.start_date}"></td>
 			<th>예약상태</th>
-			<td th:text="${myReservation.status}">
-				<a th:href="@{/program/programReview(reserNum=${myReservation.reserNum})}" 
-					th:text="프로그램리뷰"></a>
-				<a th:href="@{/program/hostReview(reserNum=${myReservation.reserNum})}" 
-					th:text="리뷰"></a>
+			<td th:switch="${myReservation.status}">
+			    <p th:case="0">예약이 확인 대기 중입니다.</p>
+			    <p th:case="1">예약이 확인되었습니다.</p>
+			    <p th:case="2">
+					<a th:href="@{/program/programReview(reserNum=${myReservation.reserNum})}" th:text="프로그램리뷰"></a> 
+					<a th:href="@{/program/hostReview(reserNum=${myReservation.reserNum})}" th:text="호스트리뷰"></a> 
+
+				</p>
+			    <p th:case="*" >알 수 없는 상태입니다.</p>
 			</td>
 		</tr>
 	</table>
