프로그램 예약 신청 programNum null 처리

--- a/src/main/resources/templates/program/apply.html
+++ b/src/main/resources/templates/program/apply.html
@@ -97,7 +97,7 @@
 		</table>
 		<input type="hidden" name="start_date" th:value="${start_date}">
 		<input type="hidden" name="end_date" th:value="${end_date}">
-		<input type="hidden" name="programNum" th:value="${program.programNum}">
+		<input type="text" name="programNum" th:value="${program.programNum}">
 		<input type="hidden" name="totalPrice" th:value="${program.price}">
 
 		<div class="right-align">
