--- a/src/main/resources/templates/program/write.html
+++ b/src/main/resources/templates/program/write.html
@@ -64,12 +64,12 @@
 
         <div>
             <input type="text" autocomplete="off" class="dateinput" id="start_date" name="start_date"
-                   placeholder="시작 날짜"></input>
+                   readonly placeholder="시작 날짜"></input>
         </div>
 
         <div>
             <input type="text" autocomplete="off" class="dateinput" id="end_date" name="end_date"
-                   placeholder="종료 날짜"></input>
+                   readonly placeholder="종료 날짜"></input>
         </div>
 
         <br>
