달력 입력 제한

--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -36,7 +36,7 @@
 				<input type="text" name="address" placeholder="지역 검색" aria-label="지역">
 
 				<!-- 날짜 선택 -->
-				<input type="text" class="dateinput" id="dateinput" placeholder="날짜 선택"></input>
+				<input type="text" class="dateinput" id="dateinput" placeholder="날짜 선택" readonly></input>
 
 				<input type="text" autocomplete="off" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"
 					   hidden="hidden"></input>
