개발 : 채팅창 구현중

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,6 +22,7 @@
 
 <!-- 헤더 섹션-->
 <header th:replace="layouts/header::header"></header>
+<!--구글사이트번역-->
 <div id="google_translate_element" class="hd_lang" style="float: right;position: relative;top: -4px;margin-left: 10px;"></div>
 
 <main>
