--- a/src/main/resources/templates/member/updateForm.html
+++ b/src/main/resources/templates/member/updateForm.html
@@ -4,9 +4,8 @@
 <meta charset="UTF-8">
 <title>회원정보수정</title>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<style>
-	
-</style>
+    <link rel="stylesheet" th:href="@{/css/main/write.css}">
+
 <script>
 function checkValid(){
         let userid = document.querySelector('#userid');
