--- a/src/main/resources/templates/member/myProgram.html
+++ b/src/main/resources/templates/member/myProgram.html
@@ -2,11 +2,49 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
 <title>Insert title here</title>
+<style>
+ 
+</style>
 </head>
 <body>
-마이프로그램
+<h3>내 프로그램 관리</h3>
+	<table>
+		<tr th:each="program: ${programList}">	
+			<th th:text="${program.programNum}"></th>
+ 			<td><a th:href="@{/program/detail(programNum=${program.programNum})}" 
+					 th:text="${program.title}"></a></td>
+		</tr>
+	</table>
 
-예약현황
+<h3>예약현황</h3>	
+<h4>(게스트에 대한 리뷰)</h4>	
+	<table>
+			<tr th:each="reservation: ${reservation}">	 
+			<th>프로그램 번호</th>
+			<td th:text="${reservation.programNum}"></td>
+			<td>
+				<a th:href="@{/program/accept(reserNum=${reservation.reserNum})}" 
+					th:text="accept"></a>
+			</td>
+			<td th:text="${reservation.inputdate}"></td>
+			<th>예약상태</th>
+			
+			<td th:switch="${reservation.status}">
+			    <p th:case="0">예약이 확인 대기 중입니다.</p>
+			    <p th:case="1">예약이 확인되었습니다.</p>
+			    <p th:case="2"><a th:href="@{/program/guestReview(reserNum=${reservation.reserNum})}" 
+					th:text="게스트리뷰작성하기"></a> </p>
+				<p th:case="3" >리뷰작성 완료</p>
+			    <p th:case="*" >알 수 없는 상태입니다.</p>
+			</td>
+		</tr>
+	</table>
+	<br>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
 </body>
 </html>
