--- a/src/main/resources/templates/member/myReview.html
+++ b/src/main/resources/templates/member/myReview.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+    <meta name="viewport">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+	<title>Insert title here</title>
+	 <style>
+       
+    </style>
 </head>
+
 <body>
- 리뷰관리
+	<h3>내 호스트 리뷰</h3>
+	<table>
+		<tr th:each="hostReview: ${hostReview}">
+			<th th:text="${hostReview.reviewerID}"></th>
+			<th th:text="${hostReview.stars}"></th>
+			<td th:text="${hostReview.content}"> </td>
+		</tr>
+	</table>
+ <h3>내 프로그램 리뷰</h3>
+	
+<div class="form-floating mb-3"  th:each="programReview: ${programReview}">
+  <input type="text" readonly class="form-control-plaintext" id="floatingPlaintextInput" th:value="${programReview.content}">
+  <label for="floatingPlaintextInput" th:text="${programReview.reviewerID}">Input with value</label>
+</div>
+	
+	
+ <h3>내 게스트 리뷰</h3>
+	<table>
+		<tr th:each="guestReview: ${guestReview}">
+			<th th:text="${guestReview.reviewerID}"></th>
+			<th th:text="${guestReview.stars}"></th>
+			<td th:text="${guestReview.content}"> </td>
+		</tr>
+	</table>
+ <h3>내 작성한 리뷰</h3>
+	<table>
+		<tr th:each="myReview: ${myReview}">
+			<th th:text="${myReview.stars}"></th>
+			<td th:text="${myReview.content}"> </td>
+		</tr>
+	</table>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
