--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,6 +22,21 @@
 
 <!-- 헤더 섹션-->
 <header th:replace="layouts/header::header"></header>
+
+<form action="/chat/createRoom" method="post">
+    <input type="text" name="name" placeholder="채팅방 이름">
+    <button type="submit" >방 만들기</button>
+</form>
+
+<table>
+    <tr th:each="room : ${roomList}" >
+        <td>
+            <a th:href="@{chatRoom(roomId=${room.roomId} )}"
+               th:text="${room.name}"></a>
+        </td>
+    </tr>
+</table>
+
 <!--구글사이트번역-->
 <div id="google_translate_element" class="hd_lang" style="float: right;position: relative;top: -4px;margin-left: 10px;"></div>
 
