마이페이지

--- a/src/main/resources/templates/member/myProgram.html
+++ b/src/main/resources/templates/member/myProgram.html
@@ -7,18 +7,47 @@
 
 <title>Insert title here</title>
 <style>
- 
+ .btn{
+  background-color: #1F9CB3;
+  border: none;
+}
+
+.btn:hover {
+      background-color:#E91E63;
+       transition: 0.5s;
+  }
+  
+   .container {
+    display: flex;
+     justify-content: left;
+      justify-content: flex-start;
+	flex-wrap: wrap;
+  }
+
+  .card {
+    /*  flex: 1;각 박스가 동일한 너비를 가지도록 */
+    margin: 10px;
+    width: 30%;
+      
+  }
 </style>
 </head>
 <body>
 <h3>내 프로그램 관리</h3>
-	<table>
-		<tr th:each="program: ${programList}">	
-			<th th:text="${program.programNum}"></th>
- 			<td><a th:href="@{/program/detail(programNum=${program.programNum})}" 
-					 th:text="${program.title}"></a></td>
-		</tr>
-	</table>
+<div class="container">
+<div class="card" style="width: 18rem;" th:each="program: ${programList}">
+  <img th:src="@{/img/board/img_3.png}" class="card-img-top" alt="...">
+  <div class="card-body">  
+    <h5 class="card-title" th:text="${program.title}">Card title</h5>
+    <a th:href="@{/program/detail(programNum=${program.programNum})}" class="btn btn-primary"  >프로그램 보기</a>
+    <a th:href="@{/program/review(programNum=${program.programNum})}" class="btn btn-primary"  >리뷰 보기</a>
+ </div>
+</div>
+</div>
+
+
+
+
 
 <h3>예약현황</h3>	
 <h4>(게스트에 대한 리뷰)</h4>	
