--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -40,6 +40,7 @@
         #mypage-nav a:hover {
             background-color: #1F9CB3;
             color: white;
+             transition: 1s;
         }
 
         #content {
