북마크한 숙소

--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -59,6 +59,7 @@
 		<li><a href="#" th:onclick="|loadContent('updateForm', event)|" th:text="회원정보수정"></a></li>
         <li><a href="#" th:onclick="|loadContent('myProgram', event)|" th:text="프로그램"></a></li>
         <li><a href="#" th:onclick="|loadContent('myReview', event)|" th:text="내예약"></a></li>
+        <li><a href="#" th:onclick="|loadContent('myBookmark', event)|" th:text="북마크"></a></li>
 
 	</ul>
 </nav> 
