font-awesome 헤더로 이동

--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -7,6 +7,7 @@
 <header th:fragment="header">
 
     <link rel="stylesheet" th:href="@{/css/header_style.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     <div class="header-container header-top" style="display: flex;
             justify-content: space-between;
