00님을 위한 추천 프로그램

--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -17,7 +17,7 @@
 <main>
 	<section class="board-container">
 		<div class="board-title">
-			<h2>인기 게시글 or 최신</h2>
+			<h2>인기 게시글</h2>
 		</div>
 
 		<div class="board-card">
